# LD50-prediction

./: .gitignore  .pre-commit-config.yaml  README.md  export_tensorrt.sh  pyproject.toml  requirements.txt  task.txt
configs/: config.yaml
configs/data/: default.yaml
configs/model/: gcn.yaml  mlp.yaml
configs/training/: default.yaml
outputs/: mlp_toxicity.onnx  mlp_toxicity.onnx.data  scaler.pkl
toxicity_prediction/: __init__.py  commands.py
toxicity_prediction/data/: __init__.py  dataset.py  preprocessing.py
toxicity_prediction/export/: __init__.py  onnx_export.py
toxicity_prediction/inference/: __init__.py  predict.py
toxicity_prediction/models/: __init__.py  gcn.py  mlp.py
toxicity_prediction/training/: __init__.py  lightning_modules.py
